Add properties resourse bundle